<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ourhome_logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ourhome_logo" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/dark_blue_border"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:background="@drawable/dark_blue_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/dark_blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/join_button"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/join"
            android:textSize="11sp"/>
    </LinearLayout>

</LinearLayout>