<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="90dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:background="@drawable/dark_blue_border" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:padding="10dp"
            android:gravity="start"
            android:text="@string/content"
            android:background="@drawable/dark_blue_border"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/dark_blue"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@color/dark_blue" >

        <ImageButton
            android:id="@+id/main_button"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/home_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/add_button"
            android:src="@drawable/add_icon"
            android:contentDescription="@string/add_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/mypage_button"
            android:src="@drawable/mypage_icon"
            android:contentDescription="@string/mypage_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

    </LinearLayout>

</FrameLayout>