<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:background="@drawable/dark_blue_border"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="10dp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:background="@drawable/dark_blue_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/password_check_edit"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:background="@drawable/dark_blue_border"
                android:hint="@string/password_check"
                android:inputType="textPassword"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/join_button"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/dark_blue"
                android:text="@string/join_button"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>