<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:orientation="vertical"
    tools:context=".MypageFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mypage_fragment"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@color/dark_blue" >

        <ImageButton
            android:id="@+id/main_button"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/home_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/un_button"
            android:src="@drawable/board_icon"
            android:contentDescription="@string/board_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/mypage_button"
            android:src="@drawable/mypage_icon"
            android:contentDescription="@string/mypage_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

    </LinearLayout>
</FrameLayout>